cli/tests/snapshots/help__help_qgroup_destroy.snap
---
source: cli/tests/help.rs
expression: "help(&[\"qgroup\", \"destroy\"])"
---
Destroy a quota group

Usage: destroy <QGROUPID> <PATH>

Arguments:
  <QGROUPID>
          Quota group ID to destroy (e.g. "0/5")

  <PATH>
          Path to a mounted btrfs filesystem

Options:
  -h, --help
          Print help
