cli/tests/snapshots/help__help_quota_rescan.snap
---
source: cli/tests/help.rs
expression: "help(&[\"quota\", \"rescan\"])"
---
Trash all qgroup numbers and scan the metadata again

Usage: rescan [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem

Options:
  -s, --status
          Show status of a running rescan operation

  -w, --wait
          Start rescan and wait for it to finish

  -W, --wait-norescan
          Wait for rescan to finish without starting it

  -h, --help
          Print help
